--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,230 +1,233 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+#hero_section {
+    margin-top: 150px;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+#hero_first_title{
+    font-size: 60px;
+    font-weight: 500;
+    color: #ffffff;
 }
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+#hero_first_title mark {
+    color: #000000;
+    font-weight: 800;
+    background-color: #04ff00;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
+#hero_second_title {
+    font-size: 60px;
     text-align: center;
-  }
+    font-weight: 500;
+    color: #ffffff;
+} 
+#hero_third_title {
+    font-size: 60px;
+    font-weight: 500;
+    color: #ffffff;
+}
+#hero_section img {
+    width: 100%;
+}
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
+#second_section{
+    margin-top: 100px;
+}
+.roundImg {
+    padding: 15px;
+    border: 1px solid #ffffff;
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+}
+.roundImg img{
+    height: 150px !important;
+    width: 150px !important;
+    animation: portfolio_text 6s infinite linear;
+}
+#arrowIcon {
+    font-size: 30px;
+    color: #04ff00;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+#second_section h2 {
+    color: #04ff00;
+    font-weight: 800;
+    font-size: 60px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+#third_section {
+    position: relative;
+    margin-top: 50px;
+}
+.aboutHead {
+    font-weight: 800;
+}
+#third_section h2{
+    font-size: 60px;
+    color: #ffffff;
+}
+.thirdLink{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.thirdLink a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.thirdLink a:hover{
+    color: #04ff00;
+}
+#price_section_contact {
+    text-decoration: none;
+    color: #04ff00;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+#portfolio_section{
+    margin-top: 50px;
+}
+#portfolio_section h2{
+    font-size: 60px;
+    color: #ffffff;
+}
+#portfolio_section img {
+    border-radius: 15px;
+}
+#portfolio_section #portfoli_btn{
+    border: 1px solid #04ff00;
+    color: #04ff00;
+}
+
+#price_section {
+    margin-top: 50px;
+}
+#priceDiv {
+    border: 2px solid #ffffff;
+    padding: 20px;
+    border-radius: 15px;
+}
+#priceTitle{
+    font-size: 60px;
+    color: #ffffff;
+}
+#priceDiv:hover {
+    border: 2px solid #04ff00;
+}
+#priceDiv h2 span{
+    font-size: 50px;
+    font-weight: 700;
+    color: #ffffff;
+}
+#priceDiv ul {
+    padding-left: 0;
+}
+#priceDiv li {
+    padding: 10px 0;
+}
+#priceDiv a{
+    width: 100%;
+    border: 1px solid #04ff00;
+    font-size: 18px;
+    color: #ffffff;
+}
+#priceDiv a:hover{
+    background-color: #04ff00;
+    color: #000000;
+}
+
+#brand_section {
+    margin-top: 50px;
+}
+#brand_section h2{
+    font-size: 50px;
+    color: #ffffff;
+}
+#brand_section h2 span {
+    font-weight: 800;
+    color: #04ff00;
+    font-size: 80px;
+}
+#brand_section img {
+    height: auto !important;
+    width: 70% !important;
+}
+
+@keyframes portfolio_text {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 500px) {
+    #hero_section {
+        margin-top: 100px;
+    }
+    #hero_first_title {
+        font-size: 50px;
+    }
+    #hero_second_title {
+        font-size: 50px;
+    }
+    #hero_third_title {
+        font-size: 50px;
+    }
+    #hero_first_title mark {
+        line-height: 1.5;
+    }
+    #strategyText {
+        display: none;
+    }
+    #third_section h2{
+        font-size: 40px;
+    }
+    .thirdLink {
+        bottom: -50px;
+    }
+    #portfolio_section {
+        margin-top: 100px;
+    }
+    #portfolio_section h2 {
+        font-size: 40px;
+    }
+    #priceTitle{
+        font-size: 40px;
+    }
+    #brand_section img {
+        height: auto !important;
+        width: 50% !important;
+    }
+    #brand_section h2 {
+        font-size: 40px;
+    }
+    #brand_section h2 span {
+        font-size: 60px;
+    }
+}
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+    #strategyText {
+        display: none;
+    }
+    .thirdLink {
+        bottom: -50px;
+    }
+    #brand_section img {
+        height: auto !important;
+        width: 100% !important;
+    }
+    #portfolio_section {
+        margin-top: 80px;
+    }
+    #portfolio_section h2 {
+        font-size: 50px;
+    }
+    #priceTitle{
+        font-size: 50px;
+    }
 }
